--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev ./src/index.ts",
+    "prepare": "husky",
+    "fix": "prettier . --write && eslint --fix ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/yup": "^0.32.0",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/yup": "^0.32.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5"
   }
 }
