--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "fix": "prettier . --write && eslint --fix ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Diego Silva",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "typescript": "^5.3.2",
+    "eslint": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/yup": "^0.32.0",
     "eslint-config-prettier": "^9.1.0",
