--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "Diego Silva",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.2",
-    "eslint": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/yup": "^0.32.0",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.2"
   }
 }
