--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev ./src/index.ts",
+    "postinstall": "tsc",
+    "production": "node  ./build/index.ts",
     "prepare": "husky",
     "fix": "prettier . --write && eslint --fix ."
   },
@@ -15,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "knex": "^3.1.0",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   },
@@ -25,6 +28,10 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
+    "sqlite": "^5.1.1",
     "typescript": "^5.3.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
