--- a/package.json
+++ b/package.json
@@ -8,30 +8,36 @@
     "postinstall": "tsc",
     "production": "node  ./build/index.ts",
     "prepare": "husky",
-    "fix": "prettier . --write && eslint --fix ."
+    "fix": "prettier . --write && eslint --fix .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Diego Silva",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
     "knex": "^3.1.0",
+    "ts-jest": "^29.1.3",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/supertest": "^6.0.2",
     "@types/yup": "^0.32.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "sqlite": "^5.1.1",
+    "supertest": "^7.0.0",
     "typescript": "^5.3.2"
   },
   "engines": {
-    "node": "16.x"
+    "node": "21.x"
   }
 }
