--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "production": "node  ./build/index.ts",
     "prepare": "husky",
     "fix": "prettier . --write && eslint --fix .",
+    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
+    "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+    "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+    "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run",
     "test": "jest"
   },
   "keywords": [],
@@ -21,6 +25,7 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "knex": "^3.1.0",
+    "ntl": "^5.1.0",
     "ts-jest": "^29.1.3",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
@@ -33,7 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
-    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "typescript": "^5.3.2"
   },
