--- a/package.json
+++ b/package.json
@@ -19,27 +19,29 @@
   "author": "Diego Silva",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^29.5.12",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
-    "jest": "^29.7.0",
     "knex": "^3.1.0",
-    "ntl": "^5.1.0",
-    "ts-jest": "^29.1.3",
-    "ts-node-dev": "^2.0.0",
+    "sqlite3": "^5.1.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "@types/yup": "^0.32.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "ntl": "^5.1.0",
     "prettier": "^3.2.5",
-    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.1.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   },
   "engines": {
